--- a/index.html
+++ b/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <H1>PIZZA PALACE!</H1>
     <link rel="stylesheet" href="css/stylesheet.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        <div>
+            <p>There's nothing perfect more than our joint.Not our chefs,marketers and even the way of life in here!Here,wer specialise for nothing else but 
+                producing the best pizza globally.Our palace not only make pizza but create food which we are proud to serve and deliver it fast, with a smile.
+                This palace has existed for over fiftheen years and was found by our great grandfather who was the best chef in town and the secret to its growth 
+                is that the pizza was awesomeand customers were treated like a family.
+            </p>
+            <div class="cont">
+              <p><strong>We're the pizza company that lives life unboxed!</strong></p>
+            </div>
+        </div>
 </head>
-<body>.
+
+<body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+           <img src="Images/hawaian.jpg" alt="">
+         <h3>Hawaii pizza</h3>
+      </div>
+      <div class="col-sm-4">
+          <img src="Images/chicken.jpg" alt="">
+        <h3>Chicken Pizza</h3>
+      </div>
+      <div class="col-sm-4">
+          <img src="Images/chees.jpg" alt="">
+        <h3>Chees Pizza</h3>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="Images/veggie.jpeg" alt="">
+        <h3>Veggie Pizza</h3>
+      </div>
+      <div class="col">
+        <img src="Images/buffalo.jpg" alt="">
+        <h3>Buffalo Pizza</h3>
+      </div>
+      <div class="col">
+        <img src="Images/meat.jpg" alt="">
+        <h3>Meat Pizza</h3>
+      </div>
+    </div>
+  </div>
+
+
+
     
 </body>
 
