--- a/index.html
+++ b/index.html
@@ -24,17 +24,98 @@
         <div class="col-sm-4">
            <img src="Images/hawaian.jpg" alt="">
          <h3>Hawaii pizza</h3>
+         <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="far fa-star"></i>
       </div>
-      <div class="col-sm-4">
+      <a href="#" class="btn">add to cart</a>
+  <div><select class="form-select" aria-label="Default select example">
+          <option selected>select toppings</option>
+          <option value="1">Pepperoni.Mushroom</option>
+          <option value="2">Onions.</option>
+          <option value="3">Sausage.</option>
+          <option value="3">Bacon.</option>
+          <option value="3">cheese.</option>
+          <option value="3">Black olives.</option>
+          <option value="3">.Green peppers..</option>
+        </select>
+        <select class="form-select" aria-label="Default select example">
+          <option selected>choose your size</option>
+          <option value="1">small</option>
+          <option value="2">medium</option>
+          <option value="3">large</option>
+        </select>
+
+  </div>
+
+
+        </div>
+        <div class="col-sm-4">
           <img src="Images/chicken.jpg" alt="">
-        <h3>Chicken Pizza</h3>
+         <h3>Chicken Pizza</h3><div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="far fa-star"></i>
       </div>
-      <div class="col-sm-4">
-          <img src="Images/chees.jpg" alt="">
-        <h3>Chees Pizza</h3>
+      <div id="liveAlertPlaceholder"></div>
+<button type="button" class="btn btn-primary" id="liveAlertBtn">add to cart</button>
+      <select class="form-select" aria-label="Default select example">
+          <option selected>select toppings</option>
+          <option value="1">Pepperoni.Mushroom</option>
+          <option value="2">Onions.</option>
+          <option value="3">Sausage.</option>
+          <option value="3">Bacon.</option>
+          <option value="3">cheese.</option>
+          <option value="3">Black olives.</option>
+          <option value="3">.Green peppers..</option>
+        </select>
+      <div><select class="form-select" aria-label="Default select example">
+          <option selected>choose your </option>
+          <option value="1">small</option>
+          <option value="2">medium</option>
+          <option value="3">large</option>
+        </select>
+
+  </div>
+
+        </div>
+        <div class="col-sm-4">
+            <img src="Images/chees.jpg" alt="">
+          <h3>Chees Pizza</h3><div class="stars">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="far fa-star"></i>
+        </div>
+        <a href="#" class="btn">add to cart</a>
+       <div><select class="form-select" aria-label="Default select example">
+            <option selected>select toppings</option>
+            <option value="1">Pepperoni.Mushroom</option>
+            <option value="2">Onions.</option>
+            <option value="3">Sausage.</option>
+            <option value="3">Bacon.</option>
+            <option value="3">cheese.</option>
+            <option value="3">Black olives.</option>
+            <option value="3">.Green peppers..</option>
+          </select>
+          <select class="form-select" aria-label="Default select example">
+            <option selected>choose your size</option>
+            <option value="1">small</option>
+            <option value="2">medium</option>
+            <option value="3">large</option>
+          </select>
+
+    </div>
+
+        </div>
       </div>
     </div>
-  </div>
 
 
 
@@ -42,18 +123,130 @@
     <div class="row">
       <div class="col-sm-4">
         <img src="Images/veggie.jpeg" alt="">
-        <h3>Veggie Pizza</h3>
-      </div>
+        <h3>Veggie Pizza</h3><div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="far fa-star"></i>
+      </div> <div id="liveAlertPlaceholder"></div>
+      <a href="#" class="btn">add to cart</a>
+      <div><select class="form-select" aria-label="Default select example">
+          <option selected>select toppings</option>
+          <option value="1">Pepperoni.Mushroom</option>
+          <option value="2">Onions.</option>
+          <option value="3">Sausage.</option>
+          <option value="3">Bacon.</option>
+          <option value="3">cheese.</option>
+          <option value="3">Black olives.</option>
+          <option value="3">.Green peppers..</option>
+        </select>
+        <select class="form-select" aria-label="Default select example">
+          <option selected>choose size</option>
+          <option value="1">small</option>
+          <option value="2">medium</option>
+          <option value="3">large</option>
+        </select>
+
+  </div>
+
+ </div>
       <div class="col">
         <img src="Images/buffalo.jpg" alt="">
         <h3>Buffalo Pizza</h3>
+      <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="far fa-star"></i>
+      </div>
+      <div id="liveAlertPlaceholder"></div>
+      <div><a href="#" class="btn">add to cart</a>
+      <select class="form-select" aria-label="Default select example">
+          <option selected>select toppings</option>
+          <option value="1">Pepperoni.Mushroom</option>
+          <option value="2">Onions.</option>
+          <option value="3">Sausage.</option>
+          <option value="3">Bacon.</option>
+          <option value="3">cheese.</option>
+          <option value="3">Black olives.</option>
+          <option value="3">.Green peppers..</option>
+        </select>
+        <select class="form-select" aria-label="Default select example">
+          <option selected>choose your size</option>
+          <option value="1">small</option>
+          <option value="2">medium</option>
+          <option value="3">large</option>
+        </select>
+
+  </div>
+
       </div>
       <div class="col">
         <img src="Images/meat.jpg" alt="">
-        <h3>Meat Pizza</h3>
+        <h3>Meat Pizza</h3> <div class="stars">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="far fa-star"></i>
+      </div>
+      <div id="liveAlertPlaceholder"></div>
+<button type="button" class="btn btn-primary" id="liveAlertBtn">add to cart</button>
+      <select class="form-select" aria-label="Default select example">
+          <option selected>select toppings</option>
+          <option value="1">Pepperoni.Mushroom</option>
+          <option value="2">Onions.</option>
+          <option value="3">Sausage.</option>
+          <option value="3">Bacon.</option>
+          <option value="3">cheese.</option>
+          <option value="3">Black olives.</option>
+          <option value="3">.Green peppers..</option>
+        </select>
+        <div><select class="form-select" aria-label="Default select example">
+          <option selected>choose your size</option>
+          <option value="1">small</option>
+          <option value="2">medium</option>
+          <option value="3">large</option>
+        </select>
+  </div>
+
       </div>
     </div>
   </div>
+
+  <form action="">
+
+    <div class="inputBox">
+        <input type="text" placeholder="name">
+    </div>
+
+    <div class="inputBox">
+      <input type="email" placeholder="email">
+
+    </div>
+
+    <div class="inputBox">
+        <input type="number" placeholder="quantity">
+    </div>
+
+    <div class="inputBox">
+      <input type="text" placeholder="food name">
+        
+
+
+    </div>
+
+    <div>
+    <textarea placeholder="comments" name="" id="" cols="30" rows="10"></textarea>
+    </div>
+
+    <div class="inputBoxx">
+    <input type="submit" value="check out here !!" class="btn">
+    </div>
+
+</form>
 
 
 
