add input spaces

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   <form action="">
 
     <div class="inputBox">
-        <input type="text" placeholder="name">
+        <input type="text" placeholder="name.">
     </div>
 
     <div class="inputBox">
