--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     </div>
 
     <div class="inputBox">
-      <input type="email" placeholder="email">
+      <input type="email" placeholder="email.">
 
     </div>
 
