--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     </div>
 
     <div class="inputBoxx">
-    <input type="submit" value="check out here !!" class="btn">
+    <input type="submit" value="check out here!!!" class="btn">
     </div>
 
 </form>
