add choose your size.

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <option value="3">.Green peppers..</option>
         </select>
         <div><select class="form-select" aria-label="Default select example">
-          <option selected>choose your size</option>
+          <option selected>choose your size.</option>
           <option value="1">small</option>
           <option value="2">medium</option>
           <option value="3">large</option>
