--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <div id="liveAlertPlaceholder"></div>
 <button type="button" class="btn btn-primary" id="liveAlertBtn">add to cart</button>
       <select class="form-select" aria-label="Default select example">
-          <option selected>select toppings</option>
+          <option selected>select toppings.</option>
           <option value="1">Pepperoni.Mushroom</option>
           <option value="2">Onions.</option>
           <option value="3">Sausage.</option>
