--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div><select class="form-select" aria-label="Default select example">
           <option selected>choose your size.</option>
           <option value="1">small.</option>
-          <option value="2">medium</option>
+          <option value="2">medium.</option>
           <option value="3">large</option>
         </select>
   </div>
