--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <option selected>choose your size.</option>
           <option value="1">small.</option>
           <option value="2">medium.</option>
-          <option value="3">large</option>
+          <option value="3">large.</option>
         </select>
   </div>
 
