--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 <button type="button" class="btn btn-primary" id="liveAlertBtn">add to cart</button>
       <select class="form-select" aria-label="Default select example">
           <option selected>select toppings</option>
-          <option value="1">Pepperoni.Mushroom</option>
+          <option value="1">Pepperoni</option>
           <option value="2">Onions.</option>
           <option value="3">Sausage.</option>
           <option value="3">Bacon.</option>
