--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <option selected>select toppings</option>
           <option value="1">Pepperoni</option>
           <option value="2">Onions</option>
-          <option value="3">Sausage.</option>
+          <option value="3">Sausage</option>
           <option value="3">Bacon.</option>
           <option value="3">cheese.</option>
           <option value="3">Black olives.</option>
